--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\AcademyLocalDB;Initial Catalog=TicketSystemDB;persist security info=True;Integrated Security=SSPI;"
+    "DefaultConnection": "Data Source=(localdb)\\AcademyLocalDB;Initial Catalog=TicketSystemDBTest2;persist security info=True;Integrated Security=SSPI;"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
